--- a/asyncapi/de/novatec/streetlight/v1/Streetlight.g3.yaml
+++ b/asyncapi/de/novatec/streetlight/v1/Streetlight.g3.yaml
@@ -1,18 +1,18 @@
 asyncapi: '2.2.0'
 
-id: 'urn:de.novatec.streetlight.v1'
+id: 'urn:de:novatec:streetlight:v1'
 
 info:
   title: Streetlight API
-  version: '1.0.0'
+  version: '1.3.0'
   description: |
     The Streetlight API allows you to remotely manage the city lights.
   contact:
     name: Streetlight API Support
     url: https://github.com/ueisele/showcase-asyncapi-api
-    email: enceladus@uweeisele.eu
+    email: enceladus@future-light-x10.eu
     x-project-name: Future Light X10
-    x-team-name: Team Enceladus
+    x-team-name: Enceladus
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0'
@@ -62,6 +62,8 @@ channels:
               id: "550e8400-e29b-11d4-a716-446655440000"
               lumen: 780
               sentat: "2021-10-30T10:38:17Z"
+              latitude: 48.8270123
+              longitude: 9.7960271
 
   lightperiod-command-v1:
     bindings:
@@ -98,7 +100,8 @@ channels:
             payload:
               id: "550e8400-e29b-11d4-a716-446655440000"
               enabled: true
-              maxlumen: 780
+              maxlumens: 780
+              minlumens: 0
               fromearliest: "16:00:00Z"
               untillatest: "07:00:00Z"
 
