--- a/.github/workflows/schema-registry.yaml
+++ b/.github/workflows/schema-registry.yaml
@@ -14,7 +14,7 @@ jobs:
           uses: actions/checkout@v1
 
         - name: Install yq
-          uses: chrisdickinson/setup-yq@4.7.1
+          uses: mikefarah/yq@v4.14.1
 
         - name: Run script
           env:
