--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
 # compiled output
 /dist
 /tmp
 /out-tsc
 /.angular
+# Only exists if Bazel was run
+/bazel-out
 
 # dependencies
 /node_modules
 
 # profiling files
 chrome-profiler-events*.json
-speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -29,6 +32,7 @@ speed-measure-plugin*.json
 .history/*
 
 # misc
+/.angular/cache
 /.sass-cache
 /connect.lock
 /coverage
@@ -37,3 +41,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+
+# System Files
+.DS_Store
+Thumbs.db
