--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.0.0",
-    "@angular/cdk": "~13.0.0",
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/cdk": "~13.0.0",
     "@angular/forms": "~13.0.0",
     "@angular/material": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
@@ -23,38 +23,31 @@
     "@angular/router": "~13.0.0",
     "@asyncapi/react-component": "~1.0.0-next.21",
     "@asyncapi/web-component": "~1.0.0-next.21",
-    "node-sass": "~6.0.1",
     "rxjs": "~7.4.0",
-    "sass-loader": "~12.3.0",
-    "tslib": "~2.3.1",
-    "yamljs": "~0.3.0",
+    "yaml": "~2.0.0-8",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.0",
-    "@angular/cli": "~13.0.0",
+    "@angular-devkit/build-angular": "~13.0.1",
+    "@angular-eslint/builder": "13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin": "13.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin-template": "13.0.0-alpha.0",
+    "@angular-eslint/schematics": "13.0.0-alpha.0",
+    "@angular-eslint/template-parser": "13.0.0-alpha.0",
+    "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.0",
-    "@types/jasmine": "~3.10.2",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/jest": "~27.0.2",
-    "@types/node": "~14.17.4",
-    "codelyzer": "~6.0.2",
-    "jasmine-core": "~3.10.1",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.8",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^8.1.0",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.4.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.4.4",
-    "webpack": "~5.63.0"
-  },
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false
+    "typescript": "~4.4.3",
+    "webpack": "~5.64.0"
   }
 }
